InsuranceOrg/force-app/main/default/objects/CommercialDriver__c/CommercialDriver__c.object-meta.xml
<CustomObject>
    <label>CommercialDriver</label>
    <nameField>
        <label>CommercialVehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CommercialDrivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>