InsuranceOrg/force-app/main/default/objects/CommercialDriver__c/fields/Age_First_Licensed__c.field-meta.xml
<CustomField>
    <fullName>Age_First_Licensed__c</fullName>
    <label>Age First Licensed</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>