InsuranceOrg/force-app/main/default/objects/CommercialDriver__c/fields/Duties_of_Driver__c.field-meta.xml
<CustomField>
    <fullName>Duties_of_Driver__c</fullName>
    <label>Duties of Driver</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>