InsuranceOrg/force-app/main/default/objects/CommercialDriver__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <length>20</length>
    <type>Text</type>
</CustomField>