InsuranceOrg/force-app/main/default/objects/CommercialDriver__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <label>LastName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>