InsuranceOrg/force-app/main/default/objects/CommercialDriver__c/fields/License_Issuing_State__c.field-meta.xml
<CustomField>
    <fullName>License_Issuing_State__c</fullName>
    <label>License Issuing State</label>
    <length>10</length>
    <type>Text</type>
</CustomField>