InsuranceOrg/force-app/main/default/objects/CommercialDriver__c/fields/Number_of_Accident__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Accident__c</fullName>
    <label>Number of Accident</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>