InsuranceOrg/force-app/main/default/objects/CommercialDriver__c/fields/Type_Of_License__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_License__c</fullName>
    <label>Type Of License</label>
    <length>20</length>
    <type>Text</type>
</CustomField>